# gtk-sample

./: CMakeLists.txt  README.md
include/: hellogtk.hpp
src/: hellogtk.cpp  main.cpp
